# communications-management-system

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
django_layer/: asgi.py  settings.py
django_layer/users/: admin.py  apps.py  managers.py  models.py
django_layer/users/migrations/: 0001_initial.py
src/: main.py  manage.py
src/django_layer/: settings.py  urls.py  wsgi.py
src/django_layer/api_clients/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
src/django_layer/api_clients/migrations/: 0001_initial.py
src/django_layer/communication_rules/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
src/django_layer/communication_rules/migrations/: 0001_initial.py  0002_departmentcommunicationrule_communication_limit_and_more.py  0002_initial.py  0003_alter_departmentcommunicationrule_preferred_mass_channels_and_more.py  0003_remove_departmentcommunicationrule_description_and_more.py  0004_alter_departmentcommunicationrule_department.py  0004_alter_departmentcommunicationrule_preferred_mass_channels_and_more.py  0005_alter_departmentcommunicationrule_communication_limit_and_more.py
src/django_layer/communication_statistics/: api.py  apps.py  mocks.py  serializers.py  urls.py
src/django_layer/users/: admin.py  api.py  managers.py  models.py  serializers.py  urls.py
src/django_layer/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py  0002_department_alter_user_options_user_full_name_and_more.py  0003_alter_user_department.py  (+6 more)
